--- a/src/qr.css
+++ b/src/qr.css
@@ -1,7 +1,7 @@
 #html5qr-code-full-region {
   border-radius: 20px !important;
 }
-#html5-qrcode-anchor-scan-type-change, #html5-qrcode-anchor-scan-type-change {
+#html5-qrcode-anchor-scan-type-change {
   display: none !important;
 }
 .html5-qrcode-element {
