update qr dialog

--- a/src/qr.css
+++ b/src/qr.css
@@ -1,7 +1,9 @@
-#html5qr-code-full-region, #qr-shaded-region {
+#html5qr-code-full-region,
+#html5qr-code-full-region__scan_region {
   border-radius: 20px !important;
 }
-#html5-qrcode-anchor-scan-type-change, span:has(#html5-qrcode-select-camera) {
+#html5-qrcode-anchor-scan-type-change,
+span:has(#html5-qrcode-select-camera) {
   display: none !important;
 }
 .html5-qrcode-element {
