--- a/src/App.css
+++ b/src/App.css
@@ -386,3 +386,38 @@ button .MuiToggleButton-root .Mui-selected {
     transform: translateY(-50px) scale(1.5);
   }
 }
+
+.red-dot {
+  position: relative;
+  width: 20px;
+  height: 20px;
+  background-color: red;
+  border-radius: 50%;
+}
+
+/* The ripple effect using a pseudo-element */
+.red-dot::after {
+  content: "";
+  position: absolute;
+  top: 5%;
+  left: 0%;
+  transform: translate(-50%, -50%);
+  width: 100%;
+  height: 100%;
+  border: 2px solid red;
+  border-radius: 50%;
+  animation: ripple 1.5s infinite;
+  opacity: 1;
+}
+
+/* Keyframes for the ripple animation */
+@keyframes ripple {
+  0% {
+    transform: translate(-50%, -50%) scale(1);
+    opacity: 1;
+  }
+  100% {
+    transform: translate(-50%, -50%) scale(2.5);
+    opacity: 0;
+  }
+}
